--- a/owl-web-app/src/styles/Navbar.css
+++ b/owl-web-app/src/styles/Navbar.css
@@ -4,6 +4,9 @@
   padding: 1rem 2rem;
   color: #101820;
   background-color: white;
+  position: sticky;
+  top: 0;            
+  z-index: 1000;
 }
 
 .nav-links {
