--- a/owl-next-app/pages/Home.module.css
+++ b/owl-next-app/pages/Home.module.css
@@ -7,21 +7,21 @@
   color: #f0f7f0;
 }
 
-.hero-content {
+.heroContent {
   max-width: 50%;
 }
 
-.hero-content h1 {
+.heroContent h1 {
   font-size: 2.5rem;
   margin-bottom: 1rem;
 }
 
-.hero-content p {
+.heroContent p {
   font-size: 1.1rem;
   margin-bottom: 1.5rem;
 }
 
-.hero-btn {
+.heroBtn {
   background: #4caf50;
   color: white;
   padding: 0.8rem 1.2rem;
@@ -30,7 +30,7 @@
   cursor: pointer;
 }
 
-.hero-image img {
+.heroImage img {
   max-width: 450px;
   border-radius: 3px;
 }
@@ -47,37 +47,37 @@
 }
 
 /* --- SECTION ÉQUIPE --- */
-.team-section {
+.teamSection {
   margin-bottom: 2rem;
 }
 
-.team-lists {
+.teamLists {
   display: flex;
   justify-content: center;
   gap: 4rem; /* espace entre les 2 colonnes */
   flex-wrap: wrap; /* pour que ça s’adapte en mobile */
 }
 
-.team-lists ul {
+.teamLists ul {
   padding: 0;
   margin: 0;
 }
 
-.team-lists li {
+.teamLists li {
   margin: 0.5rem 0;
   font-weight: 500;
   text-align: left;
 }
 
 /* --- SECTION FONCTIONNALITÉS --- */
-.features-grid {
+.featuresGrid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 2rem;
   margin-top: 2rem;
 }
 
-.feature-card {
+.featureCard {
   background: white;
   padding: 2rem;
   border-radius: 10px;
@@ -85,17 +85,17 @@
   overflow: hidden; /* Empêche l’image de dépasser du cadre */
 }
 
-.feature-card img {
+.featureCard img {
   width: 90px;
   margin-bottom: 1rem;
   transition: transform 0.3s ease; /* Transition fluide */
   border-radius: 3px;
 }
 
-.feature-card:hover img {
+.featureCard:hover img {
   transform: scale(1.2); /* Zoom de 20 % au survol */
 }
 
-.feature-card h3 {
+.featureCard h3 {
   margin: 0.5rem 0;
 }
