--- a/owl-next-app/components/Navbar.module.css
+++ b/owl-next-app/components/Navbar.module.css
@@ -1,18 +1,21 @@
 .navbar {
   display: flex;
   justify-content: space-between;
-  padding: 1rem 2rem;
+  padding: 0.6rem 2rem;
   color: #101820;
   background-color: white;
   position: sticky;
   top: 0;
   z-index: 1000;
+  align-items: center;
 }
 
 .navLinks {
   display: flex;
   gap: 1.5rem;
   list-style: none;
+  margin: 0;
+  align-items: center;
 }
 
 .navLinks a {
@@ -24,16 +27,16 @@
 .connection {
   color: white !important;
   background-color: #101820;
-  border-radius: 5px;
-  padding: 15px;
+  border-radius: 10px;
+  padding: 8px;
   transition: background-color 0.3s;
 }
 
 .connection:hover {
   color: #101820 !important;
   background-color: #ffffff;
-  border-radius: 5px;
-  padding: 15px;
+  border-radius: 10px;
+  padding: 8px;
   transition: background-color 0.3s;
 }
 
