--- a/owl-next-app/components/Navbar.module.css
+++ b/owl-next-app/components/Navbar.module.css
@@ -10,18 +10,28 @@
   align-items: center;
 }
 
+.logo {
+  font-size: 30px;
+  font-weight: bolder;
+}
+
 .navLinks {
   display: flex;
   gap: 1.5rem;
   list-style: none;
   margin: 0;
   align-items: center;
+  transition: transform 0.3s ease-in-out;
 }
 
 .navLinks a {
   color: #101820;
   text-decoration: none;
   font-weight: bold;
+}
+
+.navLinks a:hover {
+  text-decoration: underline;
 }
 
 .connection {
@@ -40,11 +50,43 @@
   transition: background-color 0.3s;
 }
 
-.navLinks a:hover {
-  text-decoration: underline;
+/* --- STYLES POUR LE HAMBURGER --- */
+.hamburger {
+  display: none; /* Caché par défaut sur grand écran */
+  cursor: pointer;
+  flex-direction: column;
+  gap: 4px;
 }
 
-.logo {
-  font-size: 30px;
-  font-weight: bolder;
+.bar {
+  display: block;
+  width: 25px;
+  height: 3px;
+  background-color: #101820;
+  transition: all 0.3s ease-in-out;
+}
+
+/* --- MEDIA QUERY POUR LES ÉCRANS MOBILES --- */
+@media (max-width: 768px) {
+  .hamburger {
+    display: flex; /* Affiché sur petit écran */
+  }
+
+  .navLinks {
+    position: absolute;
+    top: 60px; /* Hauteur de la navbar */
+    left: 0;
+    right: 0;
+    background-color: white;
+    flex-direction: column;
+    width: 100%;
+    padding: 2rem 0;
+    gap: 2rem;
+    transform: translateY(-120%); /* Caché en dehors de l'écran */
+    z-index: -1; /* Pour être derrière la navbar */
+  }
+
+  .navLinks.open {
+    transform: translateY(0); /* Le fait apparaître */
+  }
 }
