--- a/owl-next-app/app/globals.css
+++ b/owl-next-app/app/globals.css
@@ -1,36 +1,3 @@
-* {
-  box-sizing: border-box;
-}
-
-body,
-html {
-  margin: 0;
-  font-family: 'Inter', sans-serif;
-  background: #f8f9fb;
-  color: #222;
-}
-
-.app {
-  width: 100%;
-  overflow-x: hidden;
-}
-
-.header {
-  display: flex;
-  justify-content: center;
-}
-
-.header-content {
-  text-align: center !important;
-}
-
-.app-container {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-  /* Utilisez 100svh pour un meilleur support sur les navigateurs mobiles */
-}
-
-.main-content {
-  flex-grow: 1;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
